Resolves: tdf#123309 destroy menu before menubutton

Change-Id: Ib6b179c460bed4ffdcc2678294633004bbae816a
Reviewed-on: https://gerrit.libreoffice.org/67677
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>